# Proyecto_UII_DSS

./: .gitattributes  .gitignore  ESTADO_ACTUAL.md  GUIA_MSR_DATA.md  INDEX.md  QUICK_REFERENCE.md  README.md  RESUMEN_FINAL.md  demo_safe.c  demo_unsafe.c  modelo.py  pyproject.toml  requirements.txt
.github/workflows/: security-ci.yml
data/: demo_dataset.csv
models/: security_classifier.joblib  security_classifier_balanced.joblib
scripts/: analyze_msr_csv.py  auto_run.py  check_json_open.py  count_msr.py  entrenar_modelo.py  find_bracket.py  inferencia_pruebas.py  inspect_msr_head.py  optimize.py  proceso_msr.py  run_pipeline_completo.py  try_iter.py  validar_datos.py
src/secure_pipeline/: __init__.py  ci_check.py  convert_bigvul.py  data.py  features.py  infer.py  train.py
